[project]
name = "chronosgraph"
version = "0.1.0"
description = "Modular embodied memory system — temporal knowledge graph"
requires-python = ">=3.10"
dependencies = [
    "ai2thor>=5.0.0",
]

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingModuleSource = false

[tool.ruff]
target-version = "py310"
line-length = 88
